Corrected a little "typo"....
The correct name has been added.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This will be a c++ project by Ling and Nathalie for the completion of
+This will be a c++ project by Ling and Analie for the completion of
 the requirements of the COMP446 class of Fall 2008 at Concordia University
