--- a/documentation/ling-report.tex
+++ b/documentation/ling-report.tex
@@ -76,29 +76,40 @@ public class A{
 The final thing I like is the seperation between the definition of a class in its header, and the definition of the methods in a \emph{cpp} file.
 
 \subsection{Dislikes}
-While I do like do be able to split the complete definition of a clas into 
-interface and implementation as we learned in class, I do find C++'s syntax 
-wierd.  Having learned Java as my first programming langue, I am more used to 
-its syntax.  I find it wierd that when you put stuff in the \emph{cpp} file you 
+While I do like do be able to split the complete definition of a clas into
+interface and implementation as we learned in class, I do find C++'s syntax
+wierd.  Having learned Java as my first programming langue, I am more used to
+its syntax.  I find it wierd that when you put stuff in the \emph{cpp} file you
 have to add class:: in front of all the methods when you write their code.
 
 I also find the \textit{<<} output syntax ugly and harder to read.  I prefer using + between strings.
 
 \section{Thoughts About COMP 446.}
 
-On a general note I am glad of choosing this class.  Peter Grogono, was the best professor I've had at Concordia, the others I had this semester being very bad. I appreciated the very quick feedback he gave on all class related things.
+On a general note I am glad of choosing this class.  Peter Grogono, was the
+best professor I've had at Concordia, the others I had this semester being very
+bad. I appreciated the very quick feedback he gave on all class related things.
 
 I enjoyed the chance to take this class.
 
 \subsection{Liked}
-I really enjoyed the class notes.  I found them easy to understand, and I learned most of the material by reading them.  It was useful to review when trying the assignments and I couldn't remember how to write something.
+I really enjoyed the class notes.  I found them easy to understand, and I
+learned most of the material by reading them.  It was useful to review when
+trying the assignments and I couldn't remember how to write something.
 notes, well written, useful.
 
-I liked the participation in the class.  Many people asked questions and helped make some things that were less clear.
+I liked the participation in the class.  Many people asked questions and helped
+make some things that were less clear.
 
 \subsection{Didn't like}
 
-There are a few problem with the class.  I did not like the environment for the presentation sometimes.  The combination of a dark room, with slide, and a gentle voice lecturing made it easy to my mind to wander and lose track of the class.
+There are a few problem with the class.  I did not like the environment for the
+presentation sometimes.  The combination of a dark room, with slide, and a
+gentle voice lecturing made it easy to my mind to wander and lose track of the
+class.
 
-My other complaint was a few of the other students.  They kept asking questions I didn't really understand, and I feel they were not really related to the presentation.  I feel they already know c++ and asked questions that were not on the same level as everyone else.
+My other complaint was a few of the other students.  They kept asking questions
+I didn't really understand, and I feel they were not really related to the
+presentation.  I feel they already know c++ and asked questions that were not
+on the same level as everyone else.
 \end{document}
