Fixed the << thing.

--- a/documentation/ling-report.tex
+++ b/documentation/ling-report.tex
@@ -82,7 +82,9 @@ wierd.  Having learned Java as my first programming langue, I am more used to
 its syntax.  I find it wierd that when you put stuff in the \emph{cpp} file you
 have to add class:: in front of all the methods when you write their code.
 
-I also find the \textit{<<} output syntax ugly and harder to read.  I prefer using + between strings.
+
+I also find the \verb|<<| output syntax ugly and harder to read.  I prefer 
+using + between strings.
 
 \section{Thoughts About COMP 446.}
 
