--- a/documentation/ling-report.tex
+++ b/documentation/ling-report.tex
@@ -21,14 +21,14 @@ the \emph{COMP354 - Software Engineering I} class.  I applied some concepts I
 learned in that class.  I got to practice things like UML while discussing
 points with my teammate, and elaborating our design.  The use was a little bit
 frivolous, as we only had two classes and they didn't interact that much; most
-of the functionnality ended up in the \texttt{Board} class.
+of the functionality ended up in the \texttt{Board} class.
 
 I also learned the use of the gcc compiler more closely.  I learned about
-seperating the building of the project into compiling the different
+separating the building of the project into compiling the different
 \emph{compilation units}, i.e. \textit{file}.cpp into the object files
 \textit{file}.o or \textit{file}.obj using gcc's compiling facilities.  The
 second step being to gather all the object files into an executable using gcc's
-linking functionnality.
+linking functionality.
 
 Finally, I learned some basic typesetting software, \LaTeXe, from a few
 students in the 446 class, which I used to typeset this document as well as the
@@ -73,13 +73,13 @@ public class A{
 }
 \end{verbatim}
 
-The final thing I like is the seperation between the definition of a class in its header, and the definition of the methods in a \emph{cpp} file.
+The final thing I like is the separation between the definition of a class in its header, and the definition of the methods in a \emph{cpp} file.
 
 \subsection{Dislikes}
-While I do like do be able to split the complete definition of a clas into
+While I do like do be able to split the complete definition of a class into
 interface and implementation as we learned in class, I do find C++'s syntax
-wierd.  Having learned Java as my first programming langue, I am more used to
-its syntax.  I find it wierd that when you put stuff in the \emph{cpp} file you
+weirds.  Having learned Java as my first programming language, I am more used to
+its syntax.  I find it weird that when you put stuff in the \emph{cpp} file you
 have to add class:: in front of all the methods when you write their code.
 
 
